# modrinth-api

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  deno.json
openapi/: config.yaml  deps.toml  gen.ts  modrinth.yaml  package.toml  tests.rs
src/: lib.rs
